# urGovernor

./: .gitmodules  CMakeLists.txt  README.md  package.xml
config/: controller.yaml  controller_test.yaml  default.yaml  governor.yaml  kinematics.yaml
include/kinematics/: DeltaInverseKinematics.h  DeltaKinematics.h  configuration.h  deltaRobot.h  vector3.h
include/urGovernor/: Algorithm.hpp  ObjectTracker.h  RosPackageTemplate.hpp  Tracker.h
launch/: deltaTest.launch  kinematicsTest.launch  teensyTest.launch  upRoot_system.launch  uproot_system_test.launch  urGovernor.launch  urGovernor_overlying_params.launch  urGovernor_test.launch
src/: Algorithm.cpp  ObjectTracker.cpp  RosPackageTemplate.cpp  Tracker.cpp  controller_node.cpp  deltaTest_node.cpp  serialOutput_node.cpp  tracker_node.cpp  urGovernor_node.cpp
src/kinematics/: DeltaInverseKinematics.cpp  deltaRobot.cpp
src/testnodes/: deltaTest_node.cpp  kinematics_test_node.cpp  serialStub_node.cpp  testTeensy_node.cpp
srv/: FetchWeed.srv  KinematicsTest.srv  MarkUprooted.srv  MotorConfigTest.srv  RemoveWeed.srv  SerialOutput.srv  SerialRead.srv  SerialWrite.srv
test/: AlgorithmTest.cpp  ObjectTrackerTest.cpp
