<?xml version="1.0"?>
<package format="2">
  <name>urGovernor</name>
  <version>0.1.0</version>
  <description>Control package for UpRoot System.</description>
  <maintainer email="efmurphy@uwaterloo.ca">Eric Murphy-Zaremba</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <!--<depend>eigen</depend>-->
  <!--<depend>boost</depend>-->
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>urVision</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <depend>serial</depend>
  
</package>
